--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
             </a>
           </li>
         </ul>
-
+        <!-- 첫번째 질문: 네비게이션에서 이부분을 오른쪽으로 붙이고싶은데 justify-content-end로도 안됩니다-->
         <ul class="nav navbar-nav justify-content-end">
             {% if user.is_authenticated %}
             <li class="nav-item">
